welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:3: error: not found: value getIndication
  var message:Char = getIndication()
                     ^